AB#1387 Allow only superusers in responsible positions for tasks